--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node server.js",
+    "dev": "nodemon server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "NODE_ENV=production nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,11 @@
   },
   "devDependencies": {
     "eslint": "^5.16.0",
-    "eslint-plugin-shopify": "^27.0.1"
+    "eslint-plugin-shopify": "^27.0.1",
+    "nodemon": "^2.0.2",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1"
   }
 }
