--- a/package.json
+++ b/package.json
@@ -24,21 +24,23 @@
     "@shopify/koa-shopify-auth": "^3.1.51",
     "@shopify/polaris": "^4.9.1",
     "@zeit/next-css": "^1.0.1",
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "isomorphic-fetch": "^2.2.1",
     "koa": "^2.11.0",
+    "koa-bodyparser": "^2.5.0",
+    "koa-router": "^7.4.0",
     "koa-session": "^5.12.3",
     "next": "^8.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.5",
     "eslint": "^5.16.0",
     "eslint-plugin-shopify": "^27.0.1",
-    "nodemon": "^2.0.2",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1"
+    "nodemon": "^2.0.2"
   }
 }
