--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@shopify/koa-shopify-auth": "^3.1.51",
     "@shopify/polaris": "^4.9.1",
     "@zeit/next-css": "^1.0.1",
+    "axios": "^0.19.0",
     "dotenv": "^6.2.0",
     "isomorphic-fetch": "^2.2.1",
     "koa": "^2.11.0",
